Fixed mobile menu and main overlap

--- a/style.scss
+++ b/style.scss
@@ -124,9 +124,9 @@ header {
         ul {
             height: 100vh; //makes the sidebar take up full vertical height
             padding-right: 5em;
-            
+            width: 85vw;
             background-color: $white;
-            box-shadow: 0em 0em 5em 5em $white;
+            box-shadow: 0em 0em 1em 5em $white;
         }
         li {
             list-style: none;
